# ClawPi

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/clawpi-agentd/: Cargo.toml
crates/clawpi-agentd/src/: main.rs
crates/clawpi-core/: Cargo.toml
crates/clawpi-core/src/: lib.rs
crates/clawpi-ctl/: Cargo.toml
crates/clawpi-ctl/src/: main.rs
crates/clawpi-init/: Cargo.toml
crates/clawpi-init/src/: main.rs
crates/clawpi-portald/: Cargo.toml
crates/clawpi-portald/src/: main.rs
crates/clawpi-recoveryd/: Cargo.toml
crates/clawpi-recoveryd/src/: main.rs
crates/clawpi-sessiond/: Cargo.toml
crates/clawpi-sessiond/src/: main.rs
crates/clawpi-setupd/: Cargo.toml
crates/clawpi-setupd/src/: main.rs
crates/clawpi-webd/: Cargo.toml
crates/clawpi-webd/src/: ai.rs  main.rs
crates/clawpi-wifid/: Cargo.toml
crates/clawpi-wifid/src/: main.rs
docs/: architecture.md  roadmap.md
docs/adr/: 0001-os-first-and-rust-first.md
image/pi-gen/: README.md  clawpi.config.example
image/pi-gen/stage-clawpi/: README.md
image/pi-gen/stage-clawpi/01-clawpi/: 00-packages  00-run-chroot.sh  00-run.sh
scripts/: build_image.sh  install_dev_on_pi.sh  install_pi_gen_deps.sh
systemd/: clawpi-agentd.service  clawpi-mode.service  clawpi-portald.service  clawpi-recovery.target  clawpi-recoveryd.service  clawpi-sessiond.service  clawpi-setup.target  clawpi-setupd.service  clawpi-webd.service  clawpi-wifid.service  clawpi.target
