[package]
name = "clawpi-agentd"
version = "0.1.0"
edition = "2021"

[dependencies]
clawpi-core = { path = "../clawpi-core" }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
zeroclaw = { package = "zeroclawlabs", git = "https://github.com/zeroclaw-labs/zeroclaw.git", rev = "3482771d6d681efe97a3517eb65912b8763ca2d5" }
