[package]
name = "clawpi-webd"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clawpi-core = { path = "../clawpi-core" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "time"] }
zeroclaw = { package = "zeroclawlabs", git = "https://github.com/zeroclaw-labs/zeroclaw.git", rev = "3482771d6d681efe97a3517eb65912b8763ca2d5" }
